--- a/build.gradle
+++ b/build.gradle
@@ -1,67 +1,27 @@
-apply plugin: 'com.android.library'
-apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'org.jetbrains.dokka-android'
-apply plugin: 'com.jfrog.bintray'
-apply plugin: 'maven-publish'
-
-android {
-  compileSdkVersion 28
-
-
-
-  defaultConfig {
-    minSdkVersion 19
-    targetSdkVersion 28
-    versionCode 1
-    versionName "1.0"
-
-    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-  }
-
-  buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-    }
-  }
-}
-
-dependencies {
-  implementation fileTree(dir: 'libs', include: ['*.jar'])
-
-  implementation 'com.android.support:appcompat-v7:28.0.0-alpha3'
-  testImplementation 'junit:junit:4.12'
-  androidTestImplementation 'com.android.support.test:runner:1.0.2'
-  androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-  api 'com.google.android.material:material:1.0.0-alpha3'
-}
-
-
-dokka {
-  outputFormat = 'html'
-  outputDirectory = "$buildDir/javadoc"
-}
-
+// Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-  ext.dokka_version = '0.9.16-eap-3'
-  ext.kotlin_version = '1.2.41'
-  repositories {
-    jcenter()
-    mavenCentral()
-    maven {
-      url  "https://dl.bintray.com/kotlin/kotlin-eap"
+    ext.kotlin_version = '1.2.50'
+    repositories {
+        google()
+        jcenter()
     }
-  }
-  dependencies {
-    classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.7.3'
-    classpath 'com.github.dcendents:android-maven-gradle-plugin:2.0'
-    classpath "org.jetbrains.dokka:dokka-android-gradle-plugin:${dokka_version}"
-  }
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.2.0-alpha18'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
 }
 
+allprojects {
+    repositories {
+        google()
+        jcenter()
+    }
+}
 
-apply from: 'deploy.gradle'
+task clean(type: Delete) {
+    delete rootProject.buildDir
+}
